# xml_json_converter

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: __init__.py  settings.py
examples/: basic_usage.py
src/: __init__.py
src/cli/: __init__.py  interface.py
src/core/: __init__.py  converter.py  xml_parser.py
src/models/: __init__ .py  nfe_extractor.py
src/utils/: __init__ .py  file_handler.py  formatters.py  validators.py
tests/: __init__.py  test_converter.py
